@@ -1,5 +1,12 @@
 Revision history for Perl extension AnyEvent::RabbitMQ
 
+        - Fix a race condition stopping connections from closing properly.
+          If you ask to open a channel, and then immediately try to close
+          the connection then the not yet open channel would never remove
+          itself from the associated connection, resulting in the connection
+          never being terminated (as there were still channels associated with
+          it).
+
         - Stop leaking all RabbitMQ messages recieved back inside
           a closure.
 
